[gd_scene load_steps=4 format=3 uid="uid://tc7uyrsmno8h"]

[ext_resource type="Script" uid="uid://ik7cbo1n6un0" path="res://src/UI/MainMenu.gd" id="1_en4mt"]
[ext_resource type="FontFile" uid="uid://cx566jpavurob" path="res://assets/fonts/pixel-game/Pixel Game.otf" id="2_yq4l5"]
[ext_resource type="FontFile" uid="uid://rn8mmsjielmk" path="res://assets/fonts/game-paused-demo/Game Paused DEMO.otf" id="3_pe8e0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_en4mt")

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.656
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -0.088012695
offset_right = 110.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="LevelButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yq4l5")
theme_override_font_sizes/font_size = 25
text = "selecciona un nivel"

[node name="PlayButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yq4l5")
theme_override_font_sizes/font_size = 25
text = "Jugar"

[node name="SelectCharacterButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yq4l5")
theme_override_font_sizes/font_size = 25
text = "Seleccionar Personaje"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yq4l5")
theme_override_font_sizes/font_size = 25
text = "Salir"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.24100001
anchor_right = 0.5
anchor_bottom = 0.46800002
offset_left = -246.0
offset_top = -0.16801453
offset_right = 246.0
offset_bottom = -0.26400757
grow_horizontal = 2

[node name="WelcomeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_yq4l5")
theme_override_font_sizes/font_size = 100
text = "BIENVENIDO "
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OptionLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_pe8e0")
theme_override_font_sizes/font_size = 30
text = "Â¿Listo para comenzar tu recorrido?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ButtonContainer/LevelButton" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonContainer/SelectCharacterButton" to="." method="_on_select_character_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
